Spacing fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,8 @@
   display: none;
 }
 
+
 #forecastcard {
   background-color: rgb(9, 41, 102);
+  margin-left: 5px;
 }
